fix(planner): show border at top of plan view when scrolled on mobile

--- a/src/app/features/planner/planner-plan-view/planner-plan-view.component.scss
+++ b/src/app/features/planner/planner-plan-view/planner-plan-view.component.scss
@@ -4,6 +4,10 @@
   overflow: auto;
   display: flex;
   height: 100%;
+
+  &.isScrolled {
+    border-top: 1px solid var(--extra-border-color);
+  }
 }
 
 .days {
